--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<link rel="stylesheet" type="text/css" href="Css/style.css">
-	<title>Elyes's Website</title>
+	<title>Elyes's Website 1</title>
 	
 </style>
 </head>
