--- a/Site2/index.html
+++ b/Site2/index.html
@@ -53,7 +53,7 @@
 
 
             <!-- to link to my new page -->
-            <a href="page2.html">Page2</a>
+            <a href="Page2.html">Page2</a>
             <br/>
             <a href="Page4.html">Page4</a>
              <br/>
